--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "standard": "^11.0.1"
   },
   "dependencies": {
-    "chalk": "^2.3.2"
+    "chalk": "^2.3.2",
+    "figures": "^2.0.0"
   }
 }
