--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "xietianxin",
   "license": "MIT",
   "devDependencies": {
+    "benchmark": "^2.1.4",
     "jest": "^22.4.3",
     "standard": "^11.0.1"
   },
