pkg: delete scope

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tbCli/tb-log",
+  "name": "tb-log",
   "version": "2.0.0",
   "description": "colorful log for info/success/error/start/warn",
   "main": "index.js",
